[gd_scene load_steps=4 format=3 uid="uid://cxf3r7es7ifwj"]

[ext_resource type="Script" path="res://blocks/breakable_block.gd" id="1_d2rnj"]
[ext_resource type="Texture2D" uid="uid://b3uev8j1c4tru" path="res://blocks/blue_purple_block.png" id="1_l2m82"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tgujx"]
size = Vector2(201, 89)

[node name="breakable_block" type="Node2D"]
script = ExtResource("1_d2rnj")

[node name="BluePurpleBlock" type="Sprite2D" parent="."]
position = Vector2(-2.38419e-07, -1.19209e-07)
scale = Vector2(2.44286, 2.44286)
texture = ExtResource("1_l2m82")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, -1.5)
shape = SubResource("RectangleShape2D_tgujx")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 0.01

[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
